@@ -28,6 +28,7 @@ Cacti CHANGELOG
 -bug: Top Graph Header Breaks When Plugins Used
 -bug: SNMP v3 Password issue caused by Firefox's Password AutoFill
 -bug: Strip Quotes does not properly handle the value 'U'
+-bug: Changes to the graph tree would not show up immediately for current user
 
 0.8.7d
 -bug#0001336: Allow to specify on_change handler for checkbox_group
